게임 서버 구현 중 - 로그인, 회원가입 구현 - 토큰 처리 구현 - 유저정보 처리 최소 구현

--- a/taxi-game-3d-server/TaxiGame3D.Server/appsettings.json
+++ b/taxi-game-3d-server/TaxiGame3D.Server/appsettings.json
@@ -9,5 +9,11 @@
   "Database": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "TaxiGame3D"
+  },
+  "Jwt": {
+    "Issuer": "taxi-game-3d-issuer",
+    "Audience": "taxi-game-3d-audience",
+    "Key": "!!taxi-game-3d-secret-key-1234567890!!",
+    "Lifetime": 3000
   }
 }
