서버 Azure 배포 클라이언트 Azure 서버 접속할 수 있도록 수정

--- a/taxi-game-3d-server/.gitignore
+++ b/taxi-game-3d-server/.gitignore
@@ -1,3 +1,6 @@
 .vs
+TaxiGame3D.Server/appsettings.AzureDev.json
 TaxiGame3D.Server/bin
 TaxiGame3D.Server/obj
+TaxiGame3D.Server/Properties/PublishProfiles
+TaxiGame3D.Server/Properties/ServiceDependencies
