--- a/taxi-game-3d-server/TaxiGame3D.Server/appsettings.Development.json
+++ b/taxi-game-3d-server/TaxiGame3D.Server/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Database": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "TaxiGame3D"
+  },
+  "Jwt": {
+    "Issuer": "taxi-game-3d-issuer",
+    "Audience": "taxi-game-3d-audience",
+    "Key": "!!taxi-game-3d-secret-key-1234567890!!",
+    "Lifetime": 3000
   }
 }
