--- a/taxi-game-3d-server/TaxiGame3D.Server/TaxiGame3D.Server.csproj
+++ b/taxi-game-3d-server/TaxiGame3D.Server/TaxiGame3D.Server.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="appsettings.AzureDev.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
